--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,147 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{yang2020hierarchical,
+  title={Hierarchical adaptive contextual bandits for resource constraint based recommendation},
+  author={Yang, Mengyue and Li, Qingyang and Qin, Zhiwei and Ye, Jieping},
+  journal={Proceedings of the web conference 2020},
+  pages={292--302},
+  year={2020},
+  abbr = {WWW},
+  html = {https://arxiv.org/pdf/2004.01136.pdf},
+  code = {https://github.com/ymy4323460/HATCH},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{li2020causal,
+  title={Causal world models by unsupervised deconfounding of physical dynamics},
+  author={Li, Minne and Yang, Mengyue and Liu, Furui and Chen, Xu and Chen, Zhitang and Wang, Jun},
+  journal={arXiv preprint arXiv:2012.14228},
+  year={2020}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@article{gao2021deconfounding,
+  title={Deconfounding representation learning based on user interactions in recommendation systems},
+  author={Gao, Junruo and Yang, Mengyue and Liu, Yuyang and Li, Jun},
+  journal={Pacific-Asia Conference on Knowledge Discovery and Data Mining},
+  pages={588--599},
+  year={2021},
+  abbr = {PAKDD}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{yang2021causalvae,
+  title={Causalvae: Disentangled representation learning via neural structural causal models},
+  author={Yang, Mengyue and Liu, Furui and Chen, Zhitang and Shen, Xinwei and Hao, Jianye and Wang, Jun},
+  journal={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  pages={9593--9602},
+  year={2021},
+  selected = {true}
+  html = {https://openaccess.thecvf.com/content/CVPR2021/papers/Yang_CausalVAE_Disentangled_Representation_Learning_via_Neural_Structural_Causal_Models_CVPR_2021_paper.pdf},
+  code = {https://github.com/ymy4323460/trustworthyAI/tree/master/research/CausalVAE},
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{yang2021top,
+  title={Top-n recommendation with counterfactual user preference simulation},
+  author={Yang, Mengyue and Dai, Quanyu and Dong, Zhenhua and Chen, Xu and He, Xiuqiang and Wang, Jun},
+  journal={Proceedings of the 30th ACM International Conference on Information \& Knowledge Management},
+  pages={2342--2351},
+  year={2021},
+  selected = {true}
+  html = {https://dl.acm.org/doi/abs/10.1145/3459637.3482305},
+  code = {https://github.com/ymy4323460/CPR},
+  abbr = {CIKM}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{yang2023debiased,
+  title={Debiased recommendation with user feature balancing},
+  author={Yang, Mengyue and Cai, Guohao and Liu, Furui and Jin, Jiarui and Dong, Zhenhua and He, Xiuqiang and Hao, Jianye and Shao, Weiqi and Wang, Jun and Chen, Xu},
+  journal={ACM Transactions on Information Systems},
+  volume={41},
+  number={4},
+  pages={1--25},
+  year={2023},
+  abbr = {ACM TOIS},
+  html = {https://dl.acm.org/doi/full/10.1145/3580594},
+  code = {https://github.com/ymy4323460/CBR},
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@article{yang2023rectifying,
+  title={Rectifying unfairness in recommendation feedback loop},
+  author={Yang, Mengyue and Wang, Jun and Ton, Jean-Francois},
+  journal={Proceedings of the 46th international ACM SIGIR Conference on Research and Development in Information Retrieval},
+  pages={28--37},
+  year={2023},
+  abbr = {SIGIR},
+  html = {https://dl.acm.org/doi/pdf/10.1145/3539618.3591754},
 }
+
+@article{jinlending,
+  title={Lending Interaction Wings to Recommender Systems with Plug-and-Play Conversational Agents},
+  author={Jin, Jiarui and Chen, Xianyu and Ye, Fanghua and Yang, Mengyue and Feng, Yue and Zhang, Weinan and Yu, Yong and Wang, Jun}
+  journal={Advances in Neural Information Processing Systems},
+  abbr = {NeurIPS},
+  year={2023},
+  html = {https://jinjiarui.github.io/preprints/CORE.pdf},
+}
+
+@inproceedings{yang2023specify,
+  title={Specify Robust Causal Representation from Mixed Observations},
+  author={Yang, Mengyue and Cai, Xinyu and Liu, Furui and Zhang, Weinan and Wang, Jun},
+  journal={Proceedings of the 29th ACM SIGKDD Conference on Knowledge Discovery and Data Mining},
+  pages={2978--2987},
+  year={2023},
+  abbr = {SIGKDD},
+  html = {https://dl.acm.org/doi/pdf/10.1145/3580305.3599512},
+  code = {https://github.com/ymy4323460/CaRI},
+}
+
+@inproceedings{yang2023specify,
+  title={Specify Robust Causal Representation from Mixed Observations},
+  author={Yang, Mengyue and Cai, Xinyu and Liu, Furui and Zhang, Weinan and Wang, Jun},
+  journal={Proceedings of the 29th ACM SIGKDD Conference on Knowledge Discovery and Data Mining},
+  pages={2978--2987},
+  year={2023},
+  abbr = {SIGKDD},
+  html = {https://dl.acm.org/doi/pdf/10.1145/3580305.3599512},
+  code = {https://github.com/ymy4323460/CaRI},
+}
+
+@article{jin2023replace,
+  title={Replace Scoring with Arrangement: A Contextual Set-to-Arrangement Framework for Learning-to-Rank},
+  author={Jin, Jiarui and Chen, Xianyu and Zhang, Weinan and Yang, Mengyue and Wang, Yang and Du, Yali and Yu, Yong and Wang, Jun},
+  journal={Proceedings of the 30th ACM International Conference on Information \& Knowledge Management},
+  abbr = {CIKM},
+  year={2023}
+}
+
+@article{yang2023invariant,
+  title={Invariant Learning via Probability of Sufficient and Necessary Causes},
+  author={Yang, Mengyue and Fang, Zhen and Zhang, Yonggang and Du, Yali and Liu, Furui and Ton, Jean-Francois and Wang, Jianhong and Wang, Jun},
+  journal={Advances in Neural Information Processing Systems},
+  abbr = {NeurIPS (Spotlight!)},
+  year={2023}
+  html = {https://github.com/ymy4323460/CaSN/CaSN_preprint.pdf},
+  code = {https://github.com/ymy4323460/CaSN},
+}
+
+@article{feng2023chessgpt,
+  title={ChessGPT: Bridging Policy Learning and Language Modeling},
+  author={Feng, Xidong and Luo, Yicheng and Wang, Ziyan and Tang, Hongrui and Yang, Mengyue and Shao, Kun and Mguni, David and Du, Yali and Wang, Jun},
+  journal={arXiv preprint arXiv:2306.09200},
+  year={2023},
+  abbr = {arxiv},
+  html = {https://arxiv.org/abs/2306.09200},
+  code = {https://github.com/waterhorse1/ChessGPT},
+  selected = {true}
+}
+
+@article{jin2023inforank,
+  title={InfoRank: Unbiased Learning-to-Rank via Conditional Mutual Information Minimization},
+  author={Jin, Jiarui and He, Zexue and Yang, Mengyue and Zhang, Weinan and Yu, Yong and Wang, Jun and McAuley, Julian},
+  year={2023},
+  html = {https://jinjiarui.github.io/preprints/InfoRank.pdf}
+}
+
+@article{jinmanage,
+  title={Manage Your Plug-in Data for Language Models: A Data-Centric Approach},
+  author={Jin, Jiarui and Wu, Yuwei and Yang, Mengyue and He, Xiaoting and Zhang, Weinan and Yang, Yiming and Yu, Yong and Wang, Jun}
+  year={2023},
+  html = {https://jinjiarui.github.io/preprints/GUNDAM.pdf}
+}
+
