--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -116,7 +116,8 @@
   journal={Advances in Neural Information Processing Systems},
   abbr = {NeurIPS (Spotlight!)},
   year={2023}
-  html = {https://github.com/ymy4323460/CaSN/CaSN_preprint.pdf},
+  html = {CaSN.pdf},
+  selected = {true}, 
   code = {https://github.com/ymy4323460/CaSN},
 }
 
@@ -127,8 +128,7 @@
   year={2023},
   abbr = {arxiv},
   html = {https://arxiv.org/abs/2306.09200},
-  code = {https://github.com/waterhorse1/ChessGPT},
-  selected = {true}
+  code = {https://github.com/waterhorse1/ChessGPT}
 }
 
 @article{jin2023inforank,
