--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,7 +25,7 @@
   journal={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
   pages={9593--9602},
   year={2021},
-  selected = {true}
+  selected = {true},
   html = {https://openaccess.thecvf.com/content/CVPR2021/papers/Yang_CausalVAE_Disentangled_Representation_Learning_via_Neural_Structural_Causal_Models_CVPR_2021_paper.pdf},
   code = {https://github.com/ymy4323460/trustworthyAI/tree/master/research/CausalVAE},
 }
@@ -36,7 +36,7 @@
   journal={Proceedings of the 30th ACM International Conference on Information \& Knowledge Management},
   pages={2342--2351},
   year={2021},
-  selected = {true}
+  selected = {true},
   html = {https://dl.acm.org/doi/abs/10.1145/3459637.3482305},
   code = {https://github.com/ymy4323460/CPR},
   abbr = {CIKM}
@@ -145,6 +145,6 @@
   title={Causal world models by unsupervised deconfounding of physical dynamics},
   author={Li, Minne and Yang, Mengyue and Liu, Furui and Chen, Xu and Chen, Zhitang and Wang, Jun},
   journal={arXiv preprint arXiv:2012.14228},
-  year={2020}
+  year={2020},
   abbr = {preprint},
 }
