--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,7 +27,7 @@
   year={2021},
   selected = {true},
   html = {https://openaccess.thecvf.com/content/CVPR2021/papers/Yang_CausalVAE_Disentangled_Representation_Learning_via_Neural_Structural_Causal_Models_CVPR_2021_paper.pdf},
-  code = {https://github.com/ymy4323460/trustworthyAI/tree/master/research/CausalVAE},
+  code = {https://github.com/ymy4323460/trustworthyAI/tree/master/research/CausalVAE}
 }
 
 @article{yang2021top,
@@ -52,7 +52,7 @@
   year={2023},
   abbr = {ACM TOIS},
   html = {https://dl.acm.org/doi/full/10.1145/3580594},
-  code = {https://github.com/ymy4323460/CBR},
+  code = {https://github.com/ymy4323460/CBR}
 }
 
 @article{yang2023rectifying,
@@ -62,7 +62,7 @@
   pages={28--37},
   year={2023},
   abbr = {SIGIR},
-  html = {https://dl.acm.org/doi/pdf/10.1145/3539618.3591754},
+  html = {https://dl.acm.org/doi/pdf/10.1145/3539618.3591754}
 }
 
 @article{jinlending,
@@ -71,7 +71,7 @@
   journal={Advances in Neural Information Processing Systems},
   abbr = {NeurIPS},
   year={2023},
-  html = {https://jinjiarui.github.io/preprints/CORE.pdf},
+  html = {https://jinjiarui.github.io/preprints/CORE.pdf}
 }
 
 @inproceedings{yang2023specify,
@@ -82,7 +82,7 @@
   year={2023},
   abbr = {SIGKDD},
   html = {https://dl.acm.org/doi/pdf/10.1145/3580305.3599512},
-  code = {https://github.com/ymy4323460/CaRI},
+  code = {https://github.com/ymy4323460/CaRI}
 }
 
 @inproceedings{yang2023specify,
@@ -93,7 +93,7 @@
   year={2023},
   abbr = {SIGKDD},
   html = {https://dl.acm.org/doi/pdf/10.1145/3580305.3599512},
-  code = {https://github.com/ymy4323460/CaRI},
+  code = {https://github.com/ymy4323460/CaRI}
 }
 
 @article{jin2023replace,
@@ -146,5 +146,5 @@
   author={Li, Minne and Yang, Mengyue and Liu, Furui and Chen, Xu and Chen, Zhitang and Wang, Jun},
   journal={arXiv preprint arXiv:2012.14228},
   year={2020},
-  abbr = {preprint},
+  abbr = {preprint}
 }
