--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,9 +25,128 @@
   journal={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
   pages={9593--9602},
   year={2021},
+  abbr = {CVPR}
   html = {https://openaccess.thecvf.com/content/CVPR2021/papers/Yang_CausalVAE_Disentangled_Representation_Learning_via_Neural_Structural_Causal_Models_CVPR_2021_paper.pdf},
   code = {https://github.com/ymy4323460/trustworthyAI/tree/master/research/CausalVAE},
   selected = {true},
 }
 
+@article{yang2021top,
+  title={Top-n recommendation with counterfactual user preference simulation},
+  author={Yang, Mengyue and Dai, Quanyu and Dong, Zhenhua and Chen, Xu and He, Xiuqiang and Wang, Jun},
+  journal={Proceedings of the 30th ACM International Conference on Information \& Knowledge Management},
+  pages={2342--2351},
+  year={2021},
+  html = {https://dl.acm.org/doi/abs/10.1145/3459637.3482305},
+  code = {https://github.com/ymy4323460/CPR},
+  abbr = {CIKM},
+  selected = {true},
+}
+
+@article{yang2023debiased,
+  title={Debiased recommendation with user feature balancing},
+  author={Yang, Mengyue and Cai, Guohao and Liu, Furui and Jin, Jiarui and Dong, Zhenhua and He, Xiuqiang and Hao, Jianye and Shao, Weiqi and Wang, Jun and Chen, Xu},
+  journal={ACM Transactions on Information Systems},
+  volume={41},
+  number={4},
+  pages={1--25},
+  year={2023},
+  abbr = {ACM TOIS},
+  html = {https://dl.acm.org/doi/full/10.1145/3580594},
+  code = {https://github.com/ymy4323460/CBR},
+}
+
+@article{yang2023rectifying,
+  title={Rectifying unfairness in recommendation feedback loop},
+  author={Yang, Mengyue and Wang, Jun and Ton, Jean-Francois},
+  journal={Proceedings of the 46th international ACM SIGIR Conference on Research and Development in Information Retrieval},
+  pages={28--37},
+  year={2023},
+  abbr = {SIGIR},
+  html = {https://dl.acm.org/doi/pdf/10.1145/3539618.3591754},
+}
+
+@article{jinlending,
+  title={Lending Interaction Wings to Recommender Systems with Plug-and-Play Conversational Agents},
+  author={Jin, Jiarui and Chen, Xianyu and Ye, Fanghua and Yang, Mengyue and Feng, Yue and Zhang, Weinan and Yu, Yong and Wang, Jun}
+  journal={Advances in Neural Information Processing Systems},
+  abbr = {NeurIPS},
+  year={2023},
+  html = {https://jinjiarui.github.io/preprints/CORE.pdf}
+}
+
+@inproceedings{yang2023specify,
+  title={Specify Robust Causal Representation from Mixed Observations},
+  author={Yang, Mengyue and Cai, Xinyu and Liu, Furui and Zhang, Weinan and Wang, Jun},
+  journal={Proceedings of the 29th ACM SIGKDD Conference on Knowledge Discovery and Data Mining},
+  pages={2978--2987},
+  year={2023},
+  abbr = {SIGKDD},
+  html = {https://dl.acm.org/doi/pdf/10.1145/3580305.3599512},
+  code = {https://github.com/ymy4323460/CaRI}
+}
+
+@inproceedings{yang2023specify,
+  title={Specify Robust Causal Representation from Mixed Observations},
+  author={Yang, Mengyue and Cai, Xinyu and Liu, Furui and Zhang, Weinan and Wang, Jun},
+  journal={Proceedings of the 29th ACM SIGKDD Conference on Knowledge Discovery and Data Mining},
+  pages={2978--2987},
+  year={2023},
+  abbr = {SIGKDD},
+  html = {https://dl.acm.org/doi/pdf/10.1145/3580305.3599512},
+  code = {https://github.com/ymy4323460/CaRI}
+}
+
+@article{jin2023replace,
+  title={Replace Scoring with Arrangement: A Contextual Set-to-Arrangement Framework for Learning-to-Rank},
+  author={Jin, Jiarui and Chen, Xianyu and Zhang, Weinan and Yang, Mengyue and Wang, Yang and Du, Yali and Yu, Yong and Wang, Jun},
+  journal={Proceedings of the 30th ACM International Conference on Information \& Knowledge Management},
+  abbr = {CIKM},
+  year={2023}
+}
+
+@article{yang2023invariant,
+  title={Invariant Learning via Probability of Sufficient and Necessary Causes},
+  author={Yang, Mengyue and Fang, Zhen and Zhang, Yonggang and Du, Yali and Liu, Furui and Ton, Jean-Francois and Wang, Jianhong and Wang, Jun},
+  journal={Advances in Neural Information Processing Systems},
+  year={2023},
+  html = {CaSN.pdf}, 
+  code = {https://github.com/ymy4323460/CaSN},
+  abbr = {NeurIPS (Spotlight!)},
+  selected = {true}
+}
+
+@article{feng2023chessgpt,
+  title={ChessGPT: Bridging Policy Learning and Language Modeling},
+  author={Feng, Xidong and Luo, Yicheng and Wang, Ziyan and Tang, Hongrui and Yang, Mengyue and Shao, Kun and Mguni, David and Du, Yali and Wang, Jun},
+  journal={Advances in Neural Information Processing Systems},
+  year={2023},
+  abbr = {NeurIPS (Spotlight!)},
+  html = {https://arxiv.org/abs/2306.09200},
+  code = {https://github.com/waterhorse1/ChessGPT}
+}
+
+@article{jin2023inforank,
+  title={InfoRank: Unbiased Learning-to-Rank via Conditional Mutual Information Minimization},
+  author={Jin, Jiarui and He, Zexue and Yang, Mengyue and Zhang, Weinan and Yu, Yong and Wang, Jun and McAuley, Julian},
+  year={2023},
+  abbr = {preprint},
+  html = {https://jinjiarui.github.io/preprints/InfoRank.pdf}
+}
+
+@article{jinmanage,
+  title={Manage Your Plug-in Data for Language Models: A Data-Centric Approach},
+  author={Jin, Jiarui and Wu, Yuwei and Yang, Mengyue and He, Xiaoting and Zhang, Weinan and Yang, Yiming and Yu, Yong and Wang, Jun}
+  year={2023},
+  abbr = {preprint},
+  html = {https://jinjiarui.github.io/preprints/GUNDAM.pdf}
+}
+
+@article{li2020causal,
+  title={Causal world models by unsupervised deconfounding of physical dynamics},
+  author={Li, Minne and Yang, Mengyue and Liu, Furui and Chen, Xu and Chen, Zhitang and Wang, Jun},
+  journal={arXiv preprint arXiv:2012.14228},
+  year={2020},
+  abbr = {preprint}
+}
 
