--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,7 +34,7 @@
 @article{yang2021top,
   title={Top-n recommendation with counterfactual user preference simulation},
   author={Yang, Mengyue and Dai, Quanyu and Dong, Zhenhua and Chen, Xu and He, Xiuqiang and Wang, Jun},
-  journal={Proceedings of the 30th ACM International Conference on Information \& Knowledge Management},
+  journal={Proceedings of the 30th ACM International Conference on Information and Knowledge Management},
   pages={2342--2351},
   year={2021},
   abbr = {CIKM},
