--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,7 +25,7 @@
   journal={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
   pages={9593--9602},
   year={2021},
-  abbr = {CVPR}
+  abbr = {CVPR},
   html = {https://openaccess.thecvf.com/content/CVPR2021/papers/Yang_CausalVAE_Disentangled_Representation_Learning_via_Neural_Structural_Causal_Models_CVPR_2021_paper.pdf},
   code = {https://github.com/ymy4323460/trustworthyAI/tree/master/research/CausalVAE},
   selected = {true},
