--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -68,7 +68,7 @@
 
 @article{jinlending,
   title={Lending Interaction Wings to Recommender Systems with Plug-and-Play Conversational Agents},
-  author={Jin, Jiarui and Chen, Xianyu and Ye, Fanghua and Yang, Mengyue and Feng, Yue and Zhang, Weinan and Yu, Yong and Wang, Jun}
+  author={Jin, Jiarui and Chen, Xianyu and Ye, Fanghua and Yang, Mengyue and Feng, Yue and Zhang, Weinan and Yu, Yong and Wang, Jun},
   journal={Advances in Neural Information Processing Systems},
   abbr = {NeurIPS},
   year={2023},
@@ -94,7 +94,7 @@
   year={2023},
   abbr = {SIGKDD},
   html = {https://dl.acm.org/doi/pdf/10.1145/3580305.3599512},
-  code = {https://github.com/ymy4323460/CaRI}
+  code = {https://github.com/ymy4323460/CaRI},
 }
 
 @article{jin2023replace,
@@ -136,7 +136,7 @@
 
 @article{jinmanage,
   title={Manage Your Plug-in Data for Language Models: A Data-Centric Approach},
-  author={Jin, Jiarui and Wu, Yuwei and Yang, Mengyue and He, Xiaoting and Zhang, Weinan and Yang, Yiming and Yu, Yong and Wang, Jun}
+  author={Jin, Jiarui and Wu, Yuwei and Yang, Mengyue and He, Xiaoting and Zhang, Weinan and Yang, Yiming and Yu, Yong and Wang, Jun},
   year={2023},
   abbr = {preprint},
   html = {https://jinjiarui.github.io/preprints/GUNDAM.pdf},
