--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 @article{yang2020hierarchical,
   title={Hierarchical adaptive contextual bandits for resource constraint based recommendation},
   author={Yang, Mengyue and Li, Qingyang and Qin, Zhiwei and Ye, Jieping},
-  journal={Proceedings of the web conference 2020},
+  journal={WWW 2020},
   pages={292--302},
   year={2020},
   abbr = {WWW},
@@ -13,7 +13,7 @@
 @article{gao2021deconfounding,
   title={Deconfounding representation learning based on user interactions in recommendation systems},
   author={Gao, Junruo and Yang, Mengyue and Liu, Yuyang and Li, Jun},
-  journal={Pacific-Asia Conference on Knowledge Discovery and Data Mining},
+  journal={PAKDD 2021},
   pages={588--599},
   year={2021},
   abbr = {PAKDD}
@@ -22,7 +22,7 @@
 @article{yang2021causalvae,
   title={Causalvae: Disentangled representation learning via neural structural causal models},
   author={Yang, Mengyue and Liu, Furui and Chen, Zhitang and Shen, Xinwei and Hao, Jianye and Wang, Jun},
-  journal={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  journal={CVPR 2021},
   pages={9593--9602},
   year={2021},
   abbr = {CVPR},
@@ -34,7 +34,7 @@
 @article{yang2021top,
   title={Top-n recommendation with counterfactual user preference simulation},
   author={Yang, Mengyue and Dai, Quanyu and Dong, Zhenhua and Chen, Xu and He, Xiuqiang and Wang, Jun},
-  journal={Proceedings of the 30th ACM International Conference on Information and Knowledge Management},
+  journal={CIKM 2021},
   pages={2342--2351},
   year={2021},
   abbr = {CIKM},
@@ -59,7 +59,7 @@
 @article{yang2023rectifying,
   title={Rectifying unfairness in recommendation feedback loop},
   author={Yang, Mengyue and Wang, Jun and Ton, Jean-Francois},
-  journal={Proceedings of the 46th international ACM SIGIR Conference on Research and Development in Information Retrieval},
+  journal={SIGIR 2023},
   pages={28--37},
   year={2023},
   abbr = {SIGIR},
@@ -69,7 +69,7 @@
 @article{jinlending,
   title={Lending Interaction Wings to Recommender Systems with Plug-and-Play Conversational Agents},
   author={Jin, Jiarui and Chen, Xianyu and Ye, Fanghua and Yang, Mengyue and Feng, Yue and Zhang, Weinan and Yu, Yong and Wang, Jun},
-  journal={Advances in Neural Information Processing Systems},
+  journal={NeurIPS 2023},
   abbr = {NeurIPS},
   year={2023},
   html = {https://jinjiarui.github.io/preprints/CORE.pdf},
@@ -78,18 +78,7 @@
 @inproceedings{yang2023specify,
   title={Specify Robust Causal Representation from Mixed Observations},
   author={Yang, Mengyue and Cai, Xinyu and Liu, Furui and Zhang, Weinan and Wang, Jun},
-  journal={Proceedings of the 29th ACM SIGKDD Conference on Knowledge Discovery and Data Mining},
-  pages={2978--2987},
-  year={2023},
-  abbr = {SIGKDD},
-  html = {https://dl.acm.org/doi/pdf/10.1145/3580305.3599512},
-  code = {https://github.com/ymy4323460/CaRI}
-}
-
-@inproceedings{yang2023specify,
-  title={Specify Robust Causal Representation from Mixed Observations},
-  author={Yang, Mengyue and Cai, Xinyu and Liu, Furui and Zhang, Weinan and Wang, Jun},
-  journal={Proceedings of the 29th ACM SIGKDD Conference on Knowledge Discovery and Data Mining},
+  journal={SIGKDD 2023},
   pages={2978--2987},
   year={2023},
   abbr = {SIGKDD},
@@ -100,7 +89,7 @@
 @article{jin2023replace,
   title={Replace Scoring with Arrangement: A Contextual Set-to-Arrangement Framework for Learning-to-Rank},
   author={Jin, Jiarui and Chen, Xianyu and Zhang, Weinan and Yang, Mengyue and Wang, Yang and Du, Yali and Yu, Yong and Wang, Jun},
-  journal={Proceedings of the ACM International Conference on Information \& Knowledge Management},
+  journal={CIKM 2023},
   year={2023},
   abbr = {CIKM},
 }
@@ -108,20 +97,20 @@
 @article{yang2023invariant,
   title={Invariant Learning via Probability of Sufficient and Necessary Causes},
   author={Yang, Mengyue and Fang, Zhen and Zhang, Yonggang and Du, Yali and Liu, Furui and Ton, Jean-Francois and Wang, Jianhong and Wang, Jun},
-  journal={Accepted as Spotlight paper at Advances in Neural Information Processing Systems},
+  journal={NeurIPS 2023 **Spotlight!**},
   year={2023},
   html = {https://github.com/ymy4323460/CaSN/CaSN_preprint.pdf}, 
   code = {https://github.com/ymy4323460/CaSN},
-  abbr = {NeurIPS (Spotlight!)},
+  abbr = {NeurIPS},
   selected = {true},
 }
 
 @article{feng2023chessgpt,
   title={ChessGPT: Bridging Policy Learning and Language Modeling},
   author={Feng, Xidong and Luo, Yicheng and Wang, Ziyan and Tang, Hongrui and Yang, Mengyue and Shao, Kun and Mguni, David and Du, Yali and Wang, Jun},
-  journal={Advances in Neural Information Processing Systems},
+  journal={NeurIPS 2023 Dataset \& Benchmark Track},
   year={2023},
-  abbr = {NeurIPS (Spotlight!)},
+  abbr = {NeurIPS},
   html = {https://arxiv.org/abs/2306.09200},
   code = {https://github.com/waterhorse1/ChessGPT},
 }
@@ -130,7 +119,7 @@
   title={InfoRank: Unbiased Learning-to-Rank via Conditional Mutual Information Minimization},
   author={Jin, Jiarui and He, Zexue and Yang, Mengyue and Zhang, Weinan and Yu, Yong and Wang, Jun and McAuley, Julian},
   year={2023},
-  abbr = {preprint},
+  abbr = {Preprint},
   html = {https://jinjiarui.github.io/preprints/InfoRank.pdf},
 }
 
@@ -138,16 +127,16 @@
   title={Manage Your Plug-in Data for Language Models: A Data-Centric Approach},
   author={Jin, Jiarui and Wu, Yuwei and Yang, Mengyue and He, Xiaoting and Zhang, Weinan and Yang, Yiming and Yu, Yong and Wang, Jun},
   year={2023},
-  abbr = {preprint},
+  abbr = {Preprint},
   html = {https://jinjiarui.github.io/preprints/GUNDAM.pdf},
 }
 
 @article{li2020causal,
   title={Causal world models by unsupervised deconfounding of physical dynamics},
   author={Li, Minne and Yang, Mengyue and Liu, Furui and Chen, Xu and Chen, Zhitang and Wang, Jun},
-  journal={arXiv preprint arXiv:2012.14228},
+  journal={arXiv},
   year={2020},
-  abbr = {preprint},
+  abbr = {Preprint},
 }
 
 
