--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,7 +33,7 @@
 
 @article{yang2021top,
   title={Top-n recommendation with counterfactual user preference simulation},
-  author={Yang, Mengyue and Dai, Quanyu and Dong, Zhenhua and Chen, Xu and He, Xiuqiang and Wang, Jun},
+  author={Yang*, Mengyue and Dai*, Quanyu and Dong, Zhenhua and Chen, Xu and He, Xiuqiang and Wang, Jun},
   journal={CIKM 2021},
   pages={2342--2351},
   year={2021},
