--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -133,7 +133,7 @@
 
 @article{li2020causal,
   title={Causal world models by unsupervised deconfounding of physical dynamics},
-  author={Li, Minne and Yang, Mengyue and Liu, Furui and Chen, Xu and Chen, Zhitang and Wang, Jun},
+  author={Li*, Minne and Yang*, Mengyue and Liu, Furui and Chen, Xu and Chen, Zhitang and Wang, Jun},
   journal={arXiv},
   year={2020},
   abbr = {Preprint},
