--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -48,7 +48,7 @@
   author={Yang, Mengyue and Fang, Zhen and Zhang, Yonggang and Du, Yali and Liu, Furui and Ton, Jean-Francois and Wang, Jianhong and Wang, Jun},
   journal={NeurIPS 2023 **Spotlight!**},
   year={2023},
-  html = {https://github.com/ymy4323460/CaSN/blob/main/CaSN_preprint.pdf}, 
+  html = {https://arxiv.org/pdf/2309.12559.pdf}, 
   code = {https://github.com/ymy4323460/CaSN},
   abbr = {NeurIPS},
   selected = {true},
