--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -86,7 +86,7 @@
   html = {https://jinjiarui.github.io/preprints/CORE.pdf},
 }
 
-@inproceedings{yang2023specify,
+@article{yang2023specify,
   title={Specify Robust Causal Representation from Mixed Observations},
   author={Yang, Mengyue and Cai, Xinyu and Liu, Furui and Zhang, Weinan and Wang, Jun},
   journal={SIGKDD 2023},
