--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,8 @@
   journal={PAKDD 2021},
   pages={588--599},
   year={2021},
-  abbr = {PAKDD}
+  abbr = {PAKDD},
+  html = {https://link.springer.com/chapter/10.1007/978-3-030-75765-6_47},
 }
 
 @article{yang2021causalvae,
@@ -84,6 +85,7 @@
   abbr = {NeurIPS},
   year={2023},
   html = {https://jinjiarui.github.io/preprints/CORE.pdf},
+  code = {https://github.com/CORE-Labet/CORE},
 }
 
 @article{yang2023specify,
@@ -103,6 +105,8 @@
   journal={CIKM 2023},
   year={2023},
   abbr = {CIKM},
+  html = {https://arxiv.org/pdf/2308.02860.pdf},
+  code = {https://github.com/Jinjiarui/STARank},
 }
 
 @article{feng2023chessgpt,
@@ -129,6 +133,7 @@
   year={2023},
   abbr = {Preprint},
   html = {https://jinjiarui.github.io/preprints/GUNDAM.pdf},
+  code = {https://github.com/GUNDAM-Labet/GUNDAM},
 }
 
 @article{li2020causal,
@@ -137,6 +142,7 @@
   journal={arXiv},
   year={2020},
   abbr = {Preprint},
+  html = {https://arxiv.org/pdf/2012.14228.pdf},
 }
 
 
