--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,6 +18,7 @@
   year={2021},
   abbr = {PAKDD},
   html = {https://link.springer.com/chapter/10.1007/978-3-030-75765-6_47},
+  code = {https://github.com/ymy4323460/B-FAIR},
 }
 
 @article{yang2021causalvae,
