--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -123,8 +123,8 @@
 @article{jin2023inforank,
   title={InfoRank: Unbiased Learning-to-Rank via Conditional Mutual Information Minimization},
   author={Jin, Jiarui and He, Zexue and Yang, Mengyue and Zhang, Weinan and Yu, Yong and Wang, Jun and McAuley, Julian},
-  year={2023},
-  abbr = {Preprint},
+  year={2024},
+  abbr = {WWW},
   html = {https://jinjiarui.github.io/preprints/InfoRank.pdf},
 }
 
