--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 @article{yang2020hierarchical,
   title={Hierarchical adaptive contextual bandits for resource constraint based recommendation},
   author={Yang, Mengyue and Li, Qingyang and Qin, Zhiwei and Ye, Jieping},
-  journal={WWW 2020},
+  journal={The Web Conference},
   pages={292--302},
   year={2020},
   abbr = {WWW},
@@ -13,7 +13,7 @@
 @article{gao2021deconfounding,
   title={Deconfounding representation learning based on user interactions in recommendation systems},
   author={Gao, Junruo and Yang, Mengyue and Liu, Yuyang and Li, Jun},
-  journal={PAKDD 2021},
+  journal={PAKDD},
   pages={588--599},
   year={2021},
   abbr = {PAKDD},
@@ -23,7 +23,7 @@
 @article{yang2021causalvae,
   title={Causalvae: Disentangled representation learning via neural structural causal models},
   author={Yang, Mengyue and Liu, Furui and Chen, Zhitang and Shen, Xinwei and Hao, Jianye and Wang, Jun},
-  journal={CVPR 2021},
+  journal={CVPR},
   pages={9593--9602},
   year={2021},
   abbr = {CVPR},
@@ -35,7 +35,7 @@
 @article{yang2021top,
   title={Top-n recommendation with counterfactual user preference simulation},
   author={Yang*, Mengyue and Dai*, Quanyu and Dong, Zhenhua and Chen, Xu and He, Xiuqiang and Wang, Jun},
-  journal={CIKM 2021},
+  journal={CIKM},
   pages={2342--2351},
   year={2021},
   abbr = {CIKM},
@@ -47,7 +47,7 @@
 @article{yang2023invariant,
   title={Invariant Learning via Probability of Sufficient and Necessary Causes},
   author={Yang, Mengyue and Fang, Zhen and Zhang, Yonggang and Du, Yali and Liu, Furui and Ton, Jean-Francois and Wang, Jianhong and Wang, Jun},
-  journal={NeurIPS 2023 **Spotlight!**},
+  journal={NeurIPS (Spotlight)},
   year={2023},
   html = {https://arxiv.org/pdf/2309.12559.pdf}, 
   code = {https://github.com/ymy4323460/CaSN},
@@ -71,7 +71,7 @@
 @article{yang2023rectifying,
   title={Rectifying unfairness in recommendation feedback loop},
   author={Yang, Mengyue and Wang, Jun and Ton, Jean-Francois},
-  journal={SIGIR 2023},
+  journal={SIGIR},
   pages={28--37},
   year={2023},
   abbr = {SIGIR},
@@ -82,7 +82,7 @@
 @article{jinlending,
   title={Lending Interaction Wings to Recommender Systems with Plug-and-Play Conversational Agents},
   author={Jin, Jiarui and Chen, Xianyu and Ye, Fanghua and Yang, Mengyue and Feng, Yue and Zhang, Weinan and Yu, Yong and Wang, Jun},
-  journal={NeurIPS 2023},
+  journal={NeurIPS},
   abbr = {NeurIPS},
   year={2023},
   html = {https://jinjiarui.github.io/preprints/CORE.pdf},
@@ -92,7 +92,7 @@
 @article{yang2023specify,
   title={Specify Robust Causal Representation from Mixed Observations},
   author={Yang, Mengyue and Cai, Xinyu and Liu, Furui and Zhang, Weinan and Wang, Jun},
-  journal={SIGKDD 2023},
+  journal={SIGKDD},
   pages={2978--2987},
   year={2023},
   abbr = {SIGKDD},
@@ -103,7 +103,7 @@
 @article{jin2023replace,
   title={Replace Scoring with Arrangement: A Contextual Set-to-Arrangement Framework for Learning-to-Rank},
   author={Jin, Jiarui and Chen, Xianyu and Zhang, Weinan and Yang, Mengyue and Wang, Yang and Du, Yali and Yu, Yong and Wang, Jun},
-  journal={CIKM 2023},
+  journal={CIKM},
   year={2023},
   abbr = {CIKM},
   html = {https://arxiv.org/pdf/2308.02860.pdf},
@@ -113,7 +113,7 @@
 @article{feng2023chessgpt,
   title={ChessGPT: Bridging Policy Learning and Language Modeling},
   author={Feng, Xidong and Luo, Yicheng and Wang, Ziyan and Tang, Hongrui and Yang, Mengyue and Shao, Kun and Mguni, David and Du, Yali and Wang, Jun},
-  journal={NeurIPS 2023 Dataset \& Benchmark Track},
+  journal={NeurIPS Dataset \& Benchmark Track},
   year={2023},
   abbr = {NeurIPS},
   html = {https://arxiv.org/abs/2306.09200},
@@ -123,6 +123,7 @@
 @article{jin2023inforank,
   title={InfoRank: Unbiased Learning-to-Rank via Conditional Mutual Information Minimization},
   author={Jin, Jiarui and He, Zexue and Yang, Mengyue and Zhang, Weinan and Yu, Yong and Wang, Jun and McAuley, Julian},
+  journal={The Web Conference},
   year={2024},
   abbr = {WWW},
   html = {https://jinjiarui.github.io/preprints/InfoRank.pdf},
