--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -47,7 +47,7 @@
 @article{yang2023invariant,
   title={Invariant Learning via Probability of Sufficient and Necessary Causes},
   author={Yang, Mengyue and Fang, Zhen and Zhang, Yonggang and Du, Yali and Liu, Furui and Ton, Jean-Francois and Wang, Jianhong and Wang, Jun},
-  journal={NeurIPS (Spotlight)},
+  journal={NeurIPS (Spotlight 3.06%)},
   year={2023},
   html = {https://arxiv.org/pdf/2309.12559.pdf}, 
   code = {https://github.com/ymy4323460/CaSN},
