--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,13 @@
+@article{liu2024attaining,
+  title={Attaining Humans Desirable Outcomes in Human-AI Interaction via Structural Causal Games},
+  author={Liu, Anjie and Wang, Jianhong and Li, Haoxuan and Chen, Xu and Wang, Jun and Kaski, Samuel and Yang, Mengyue},
+  journal={arXiv preprint arXiv:2405.16588},
+  abbr = {preprint},
+  html = {https://arxiv.org/pdf/2405.16588},
+  year={2024}
+}
+
+
 @article{yang2020hierarchical,
   title={Hierarchical adaptive contextual bandits for resource constraint based recommendation},
   author={Yang, Mengyue and Li, Qingyang and Qin, Zhiwei and Ye, Jieping},
