--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,8 @@
   journal={arXiv preprint arXiv:2405.16588},
   abbr = {preprint},
   html = {https://arxiv.org/pdf/2405.16588},
-  year={2024}
+  year={2024},
+  selected = {true},
 }
 
 
