--- a/_news/pcic2024.md
+++ b/_news/pcic2024.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-I'm honoured to be invited as the speaker at [PCIC 2024](https://spco.cc/pcic/index.html).
+I'm honoured to be invited as the speaker at [PCIC 2024](https://spco.cc/pcic/index.html). PCIC 2024 is scheduled to be held concurrently with the World Artificial Intelligence Conference (WAIC).
