--- a/_news/pcic2024.md
+++ b/_news/pcic2024.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-date: 2024-03-19
+date: 2024-07-04
 inline: true
 related_posts: false
 ---
 
-I'm honoured to be invited as the speaker at [PCIC 2024](https://spco.cc/pcic/index.html). PCIC 2024 is scheduled to be held concurrently with the World Artificial Intelligence Conference (WAIC).
+Invited talk at Causality Conference [PCIC 2024](https://spco.cc/pcic/index.html). PCIC 2024 is scheduled to be held concurrently with the World Artificial Intelligence Conference (WAIC). My talk is about Essential Causal Representation Learning via the Probability of Sufficient and Necessary Causes.
