--- a/_news/pcic2024.md
+++ b/_news/pcic2024.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-Invited talk at Causality Conference [PCIC 2024](https://spco.cc/pcic/index.html). PCIC 2024 is scheduled to be held concurrently with the World Artificial Intelligence Conference (WAIC). My talk is about Essential Causal Representation Learning via the Probability of Sufficient and Necessary Causes.
+Invited talk at Causality Conference [PCIC 2024](https://spco.cc/pcic/index.html). PCIC 2024 is scheduled to be held concurrently with the World Artificial Intelligence Conference ([WAIC](https://www.worldaic.com.cn/)). My talk is about Essential Causal Representation Learning via the Probability of Sufficient and Necessary Causes.
