--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,11 @@
+
+@article{yan2024efficient,
+  title={Efficient Reinforcement Learning with Large Language Model Priors},
+  author={Yan, Xue and Song, Yan and Feng, Xidong and Yang, Mengyue and Zhang, Haifeng and Ammar, Haitham Bou and Wang, Jun},
+  journal={ICLR},
+  year={2025}
+}
+
 @article{liu2024attaining,
   title={Attaining Humans Desirable Outcomes in Human-AI Interaction via Structural Causal Games},
   author={Liu, Anjie and Wang, Jianhong and Li, Haoxuan and Chen, Xu and Wang, Jun and Kaski, Samuel and Yang, Mengyue},
