--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,4 +1,11 @@
 
+@article{sun2025causal,
+  title={Causal Representation Learning from Multimodal Biological Observations},
+  author={Yuewen Sun, Lingjing Kong, Guangyi Chen, Loka Li, Gongxu Luo, Zijian Li, Yixuan Zhang, Yujia Zheng, Mengyue Yang, Petar Stojanov, Eran Segal, Eric P. Xing, Kun Zhang},
+  journal={ICLR},
+  year={2025}
+}
+
 @article{yan2024efficient,
   title={Efficient Reinforcement Learning with Large Language Model Priors},
   author={Yan, Xue and Song, Yan and Feng, Xidong and Yang, Mengyue and Zhang, Haifeng and Ammar, Haitham Bou and Wang, Jun},
