--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,8 @@
 
 @article{sun2025causal,
   title={Causal Representation Learning from Multimodal Biological Observations},
-  author={Yuewen Sun, Lingjing Kong, Guangyi Chen, Loka Li, Gongxu Luo, Zijian Li, Yixuan Zhang, Yujia Zheng, Mengyue Yang, Petar Stojanov, Eran Segal, Eric P. Xing, Kun Zhang},
+  author={Sun, Yuewen and Kong, Lingjing and Chen, Guangyi and Li, Loka and Luo, Gongxu and Li, Zijian and Zhang, Yixuan and Zheng, Yujia and Yang, Mengyue and Stojanov, Petar and Segal, Eran and Xing, Eric P. and Zhang, Kun},
+  abbr = {ICLR},
   journal={ICLR},
   year={2025}
 }
@@ -9,6 +10,7 @@
 @article{yan2024efficient,
   title={Efficient Reinforcement Learning with Large Language Model Priors},
   author={Yan, Xue and Song, Yan and Feng, Xidong and Yang, Mengyue and Zhang, Haifeng and Ammar, Haitham Bou and Wang, Jun},
+  abbr = {ICLR},
   journal={ICLR},
   year={2025}
 }
