--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,8 +21,7 @@
   journal={arXiv preprint arXiv:2405.16588},
   abbr = {preprint},
   html = {https://arxiv.org/pdf/2405.16588},
-  year={2024},
-  selected = {true},
+  year={2024}
 }
 
 
@@ -56,9 +55,7 @@
   year={2021},
   abbr = {CVPR},
   html = {https://openaccess.thecvf.com/content/CVPR2021/papers/Yang_CausalVAE_Disentangled_Representation_Learning_via_Neural_Structural_Causal_Models_CVPR_2021_paper.pdf},
-  code = {https://github.com/ymy4323460/trustworthyAI/tree/master/research/CausalVAE},
-  selected = {true},
-}
+  code = {https://github.com/ymy4323460/trustworthyAI/tree/master/research/CausalVAE}}
 
 @article{yang2021top,
   title={Top-n recommendation with counterfactual user preference simulation},
@@ -68,9 +65,7 @@
   year={2021},
   abbr = {CIKM},
   html = {https://dl.acm.org/doi/abs/10.1145/3459637.3482305},
-  code = {https://github.com/ymy4323460/CPR},
-  selected = {true},
-}
+  code = {https://github.com/ymy4323460/CPR}}
 
 @article{yang2023invariant,
   title={Invariant Learning via Probability of Sufficient and Necessary Causes},
@@ -79,9 +74,7 @@
   year={2023},
   html = {https://arxiv.org/pdf/2309.12559.pdf}, 
   code = {https://github.com/ymy4323460/CaSN},
-  abbr = {NeurIPS},
-  selected = {true},
-}
+  abbr = {NeurIPS}}
 
 @article{yang2023debiased,
   title={Debiased recommendation with user feature balancing},
