--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,4 +1,17 @@
 
+@article{jin2025large,
+  title={Large Language Models are Demonstration Pre-Selectors for Themselves},
+  author={Jin, Jiarui and Wu, Yuwei and Li, Haoxuan and He, Xiaoting and Zhang, Weinan and Yang, Yiming and Yu, Yong and Wang, Jun and Yang, Mengyue},
+  journal={ICML},
+  year={2025}
+}
+
+@article{zhu2024can,
+  title={When Can Proxies Improve the Sample Complexity of Preference Learning?},
+  author={Zhu, Yuchen and de Souza, Daniel Augusto and Shi, Zhengyan and Yang, Mengyue and Minervini, Pasquale and D'Amour, Alexander and Kusner, Matt J},
+  journal={ICML},
+  year={2025}
+}
 
 @article{sun2025causal,
   title={Causal Representation Learning from Multimodal Biological Observations},
