--- a/_news/icml2025.md
+++ b/_news/icml2025.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-Keynote speak at ICML 2025 workshop on Scaling Up Intervention Models and panel discussion at ICML 2025 workshop on Multi-Agent System.
+Keynote talk in ICML 2025 workshop on Scaling Up Intervention Models and panel discussion in ICML 2025 workshop on Multi-Agent System.
